[gd_scene load_steps=5 format=3 uid="uid://cy5ubymjh80ah"]

[ext_resource type="Script" uid="uid://du86a3l18loia" path="res://tools/abilitygraph/nodes/base/graph_node_base.gd" id="1_a1bxe"]

[sub_resource type="Animation" id="Animation_b0rem"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ypw0o"]
resource_name = "pulsate"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 1, 1, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_at0vd"]
_data = {
&"RESET": SubResource("Animation_b0rem"),
&"pulsate": SubResource("Animation_ypw0o")
}

[node name="GraphNodeBase" type="GraphNode" node_paths=PackedStringArray("option_button", "animation_player", "slot_button_add", "slot_button_remove")]
offset_right = 9.0
offset_bottom = 55.0
resizable = true
title = "Base node"
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
script = ExtResource("1_a1bxe")
option_button = NodePath("OptionButton")
animation_player = NodePath("AnimationPlayer")
slot_button_add = NodePath("HBoxContainer/Add")
slot_button_remove = NodePath("HBoxContainer/Remove")

[node name="Label" type="Label" parent="."]
layout_mode = 2
text = "Slot"

[node name="OptionButton" type="OptionButton" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Remove" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "-"

[node name="Add" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "+"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_at0vd")
}

[connection signal="resize_request" from="." to="." method="_on_resize_request"]
[connection signal="item_selected" from="OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="pressed" from="HBoxContainer/Remove" to="." method="_on_remove_slot_pressed"]
[connection signal="pressed" from="HBoxContainer/Add" to="." method="_on_add_slot_pressed"]
